recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.error
SplitHanoi3:11: error: ':' expected but ',' found.
def hanoi_fast(height, src, free, full, dst) {
                     ^SplitHanoi3:31: error: identifier expected but '}' found.
}
^